--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "connect-flash": "^0.1.1",
+    "csurf": "^1.8.3",
     "dotenv": "^1.2.0",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
